# tchapp

./: .gitignore  LICENSE  README.md  readme.txt
doc/: 2016-11-8-大神农夫意见反馈.txt  bash_on_win10.txt  devlog.txt  linux下编译native代码.txt  readme.txt  分离cef和clr.txt  分离cef和clr文件.txt  开发环境搭建.txt  意见及反馈.txt  集成Razor.txt  项目代码说明.txt  项目结构.txt
res/: reslink.txt
src/: T4DTEHelper.t4  TchApp.sln  build_dotnet.sh  build_linux.sh  global.json
src/CLS/TchApp.HttpSimulator/: Constants.cs  ExceptionExtensions.cs  Frame.FeatureCollection.cs  Frame.Generated.cs  Frame.cs  FrameDuplexStream.cs  FrameHeaders.Generated.cs  FrameHeaders.cs  FrameRequestHeaders.cs  FrameResponseHeaders.cs  PathNormalizer.cs  ReasonPhrases.cs  ServerAddress.cs  ServiceContext.cs  TchApp.HttpSimulator.xproj  TchListener.cs  TchServer.cs  TchServerOptions.cs  TchServerOptionsSetup.cs  WebHostBuilderTchHttpSimulatorExtensions.cs  project.json
src/CLS/TchApp.HttpSimulator/Properties/: AssemblyInfo.cs
src/CLS/TchApp.TchClient/: Application.cs  Client.cs  DefaultTchRequestProcessor.cs  TchApp.TchClient.xproj  TchHelper.cs  project.json  tchapp.js
src/CLS/TchApp.TchClient/Properties/: AssemblyInfo.cs
src/example/TchApp.Example.Hello/: Program.cs  TchApp.Example.Hello.xproj
src/example/TchApp.Example.Hello/Properties/: AssemblyInfo.cs
src/native/: CMakeLists.txt  TchApp.props  macros.cmake
src/native/cmake/: FindCEF.cmake  cef_macros.cmake  cef_variables.cmake
src/native/inc/: TchVersion.h
src/native/libtch_dll/: libtch_dll.vcxproj  libtch_dll.vcxproj.filters
src/native/libtch_dll/libcef_dll/: CMakeLists.txt
src/native/libtch_dll/libcef_dll/ctocpp/: browser_ctocpp.cc  post_data_ctocpp.cc  print_settings_ctocpp.cc  sslinfo_ctocpp.cc
src/native/libtch_dll/libcef_dll/ctocpp/views/: display_ctocpp.cc
src/native/libtch_dll/libcef_dll/wrapper/: cef_byte_read_handler.cc  cef_resource_manager.cc  cef_stream_resource_handler.cc
src/native/tch_include/: TchTypedef.h  TchVersion.h
src/native/tchclient/: tchclient.vcxproj  tchclient.vcxproj.filters
src/native/tchclient/cefclient/: CMakeLists.txt  cefclient.h  cefclient_gtk.cc  cefclient_win.cc
src/native/tchclient/cefclient/browser/: browser_window_osr_gtk.cc  browser_window_osr_gtk.h  client_handler.cc  osr_window_win.cc  osr_window_win.h  resource_util.cc  response_filter_test.cc  root_window.h  root_window_gtk.cc  root_window_gtk.h  root_window_manager.cc  root_window_manager.h  root_window_win.cc  root_window_win.h  scheme_test.cc  test_runner.cc  views_window.cc
src/native/tchclient/cefclient/common/: client_app.h  client_app_other.h  client_switches.h  scheme_test_common.h
src/native/tchclient/cefclient/tch_add/: TchCairoRenderer.cc  TchCairoRenderer.h  TchClientExport.cc  TchClientExport.h  TchClientExportGtk.cc  TchClientExportWin.cc  TchErrorHandler.cc  TchErrorHandler.h  TchGDIRenderer.cc  TchGDIRenderer.h  TchQueryHandler.cc  TchQueryHandler.h  TchRequestResourceProvider.cc  TchRequestResourceProvider.h  TchResourceHandler.cc  TchResourceHandler.h  TchWindowApi.cpp  TchWindowApi.h  TchWindowApiGtk.cc  TchWindowApiWin.cc
src/native/tchmain/: CMakeLists.txt  TchApp.Main.vcxproj  TchApp.Main.vcxproj.filters  TchClientApi.cc  TchMainExport.h  TchMainExportGtk.cc  TchMainExportWin.cc
src/native/tchsubprocess/: TchApp.Subprocess.vcxproj  TchApp.Subprocess.vcxproj.filters
src/native/tchsubprocess/cefclient/: CMakeLists.txt  cefclient_gtk.cc  cefclient_win.cc
src/native/tchsubprocess/cefclient/common/: client_app.h  client_app_other.h  client_switches.h  scheme_test_common.h
src/native/tchsubprocess/cefclient/renderer/: client_app_delegates_renderer.cc  client_app_renderer.h  client_renderer.h  performance_test.h  performance_test_setup.h
src/simple/TchApp.Simple.Hello/: Program.cs  TchApp.Simple.Hello.xproj  project.json
src/simple/TchApp.Simple.Hello/Properties/: AssemblyInfo.cs
src/simple/TchApp.Simple.MVC/: Program.cs  Startup.cs  TchApp.Simple.MVC.xproj  project.json
src/simple/TchApp.Simple.MVC/Controllers/: HomeController.cs
src/simple/TchApp.Simple.MVC/Properties/: launchSettings.json
src/simple/TchApp.Simple.MVC/Views/: _ViewImports.cshtml
src/simple/TchApp.Simple.MVC/Views/Shared/: _Layout.cshtml
src/test/CmdTest/: CmdTest.csproj  Program.cs  cshtml.cs  cshtml.tt
src/test/CmdTest/Properties/: AssemblyInfo.cs
src/test/tchclient/: Program.cs  project.json  tchclient.xproj
src/test/tchclient/Properties/: AssemblyInfo.cs  launchSettings.json
src/test/tchclient/ui/: _Layout.cshtml  _ViewStart.cshtml  cshtml.cs  cshtml.tt  doraemon.html  index.cshtml  index.html  test.cshtml
src/tools/RazorCompiler/: Program.cs  RazorCompiler.cs  RazorCompiler.xproj  project.Release.json  project.debug.json  project.json
src/tools/RazorCompiler/Properties/: AssemblyInfo.cs  launchSettings.json
src/tools/RazorCompiler/Properties/PublishProfiles/: RazorCompilerWin10X64.pubxml  RazorCompiler_Wn10X64-publish.ps1
src/tools/TchApp.Razor/: DynamicViewData.cs  IRazorPage.cs  IView.cs  RenderAsyncDelegate.cs  TchApp.Razor.xproj  TchRazorActivator.cs  TchRazorPage.cs  TchRazorView.cs  ViewContext.cs  project.json
src/tools/TchApp.Razor/Properties/: AssemblyInfo.cs
